# movie-recsys-ml-development

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: constants.py  eda.ipynb  fit_models.ipynb  grid_search_ALS_hyperparams.py  imdb_processor.py  kion_models.ipynb  mock_user_features.py  models_compare.ipynb  train_als_u2i.py  train_ncf.py  utils.py
src/recommenders/: als.py  als_recommender.py  base.py  feature_processors.py  lightfm.py  lightfm_recommender.py
src/recommenders/item2item/: als.py  als_recommender.py  base.py  lightfm.py  lightfm_recommender.py
src/sandbox/: 0. eda.ipynb  1. top_movie_baseline.ipynb  2. ALS.ipynb  2.2 iALS [kion].ipynb  3. NCF.ipynb  eda.ipynb  kion_models.ipynb
