[tool.poetry]
name = "movie recsys"
version = "0.1.0"
description = ""
authors = ["MRossa <maxim.rossa@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.2"
optuna = "^4.1.0"
rectools = {extras = ["lightfm"], version = "^0.9.0"}
implicit = {git = "https://github.com/benfred/implicit.git"}
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
ruff = "^0.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
