[tool.poetry]
name = "movie recsys"
version = "0.1.0"
description = ""
authors = ["MRossa <maxim.rossa@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "1.26.4"
pandas = "^2.2.2"
optuna = "^4.1.0"
seaborn = "^0.13.2"
implicit = "^0.7.2"
rectools = {extras = ["lightfm"], version = "^0.11.0"}
torch = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
ruff = "^0.8.6"
pre-commit = "^4.2.0"
nbstripout = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
